--- a/index.html
+++ b/index.html
@@ -48,24 +48,26 @@
   <section class="news">
     <div class="container">
       <h1 class="section-title">News</h1>
-      <article class="news-item">
-        <img src="img/news.png">
-        <p>hello. hello. hello. hello. hello.
-        hello. hello. hello. hello. hello. hello.
-      </p>
-      </article>
-      <article class="news-item">
-        <img src="img/news.png">
-        <p>hello. hello. hello. hello. hello.
-        hello. hello. hello. hello. hello. hello.
-      </p>
-      </article>
-      <article class="news-item">
-        <img src="img/news.png">
-        <p>hello. hello. hello. hello. hello.
-        hello. hello. hello. hello. hello. hello.
-      </p>
-      </article>
+      <div class="flex">    
+        <article class="news-item">
+          <img src="img/news.png">
+          <p>hello. hello. hello. hello. hello.
+            hello. hello. hello. hello. hello. hello.
+          </p>
+        </article>
+        <article class="news-item">
+          <img src="img/news.png">
+          <p>hello. hello. hello. hello. hello.
+            hello. hello. hello. hello. hello. hello.
+          </p>
+        </article>
+        <article class="news-item">
+          <img src="img/news.png">
+          <p>hello. hello. hello. hello. hello.
+            hello. hello. hello. hello. hello. hello.
+          </p>
+        </article>
+      </div>
     </div>
   </section>
 
@@ -85,11 +87,21 @@
   </footer>
 
   <script>
+  (function() {
+    'use strict';
+
     const openMenu = document.getElementById('open_menu');
+    const closeMenu = document.getElementById('close_menu');
+    const menu = document.getElementById('menu');
 
     openMenu.addEventListener('click', function() {
-      alert('Clicked!');
+      menu.classList.add('shown');
     });
+
+    closeMenu.addEventListener('click', function() {
+      menu.classList.remove('shown');
+    });
+  })();
 
   </script>
 </body>
